--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <!-- Define an array resource for the Spinner options -->
     <string-array name="order_status_options">
         <item>Ongoing</item>
+        <item>Cancelled</item>
         <item>Finished</item>
     </string-array>
 
