feat: -added analytics activity using jetpack compose -issue just update and the kotlin version then you can use jetpack compose -note: gradle may take very long since its new kotlin version and many compose dependencies added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
         <item>CANCELLED</item>
         <item>COMPLETED</item>
     </string-array>
+    <string name="title_activity_analytics">AnalyticsActivity</string>
 
 </resources>
